devel
-----

* Fix BTS-2226: Fix INSERT with overwriteMode: "ignore" failing when run
  multiple times on smart graph edge collections in cluster mode. The issue
  occurred when inserting edges that already existed, causing the operation
  to fail instead of silently ignoring duplicates as expected.

* Add option --server.jwt-token to arangosh and all other client tools.
  This allows you to login with a JWT token that is valid for the system.
  You can get this token from the _open/auth endpoint. You need to either
  pick username and password, or the JWT token when starting
  a client tool. Please note: You can write "--server.jwt-token -"
  to get prompted for the token, so it is not visible in the
  process list.

* Fix defaults for inverted indexes and views. Consolidations 5 times
  less frequently, with minimum of 50(1 before) segments and 24M bytes
  (2M before), maximum 200 (10 before) segments and 8G bytes (800M
  before).

* Fix BTS-2231: Fix a divide-by-zero crash in case a smart edge collection is used in a
  collect query with a custom index.

* Add API for deployment ID: /_admin/deployment/id .

* Rename the `--experimental-vector-index` startup option to `--vector-index`
  and remove the experimental flag. The old name can still be used to enable the
  vector index feature.

* Add vertex collections for graph queries using edge collection syntax
  from named graphs. This means that if a query uses edge collection syntax
  and a named graph defines the from and to vertex collections for that edge
  collection, the WITH statement is no longer required.

* Add filtering support for vector index queries. Filter conditions can now be
  pushed down into vector similarity searches, enabling filtering with vector index by
  evaluating filters during the index scan rather than as a post-processing step.

* Upgraded OpenSSL to 3.5.4.

* Fix BTS-2203: Fix part of it by introducing memory supervision to COLLECT 
